# app/controllers/students/delete/handler.rb
@@ -1,0 +1,7 @@
+
+module Students::Delete::Handler
+  include Middlewares::DeleteObject
+  def delete
+    render json: make_delete_response(Student, params)
+  end
+end
