# app/controllers/students/middlewares/params.rb
@@ -1,0 +1,13 @@
+
+module Students::Middlewares::Params
+  private
+  def get_student_params
+    params.require(:student).permit(
+      :id,
+      :profile,
+      :course_id,
+      :pass_percentage,
+      :state
+    )
+  end
+end
