# app/controllers/students_controller.rb
@@ -1,0 +1,6 @@
+class StudentsController < ApplicationController
+  include Students::Get::Handler
+  include Students::Patch::Handler
+  include Students::Post::Handler
+  include Students::Delete::Handler
+end
